[package]
name = "pung"
version = "0.1.0"
authors = ["Sebastian Angel <sebs@cs.utexas.edu>"]
build = "build.rs"

[build-dependencies]
capnpc = ">= 0.7.3"
gcc = ">= 0.3.35"
cmake = ">= 0.1.17"

[dependencies]
time = ">= 0.1.35"
capnp = ">= 0.7.4"
capnp-rpc = ">= 0.7.4"
gj = ">= 0.2.0"
gjio = ">= 0.1.3"
timely = ">= 0.0.15"
timely_communication = ">= 0.1.5"
abomonation = ">= 0.4.3"
byteorder = ">= 0.5.3"
rand = ">= 0.3.14"
rust-crypto = ">= 0.2.36"
quicksort = ">= 1.0.0"
libc = ">= 0.2.16"
getopts = ">= 0.2.14"
bit-vec = ">= 0.4.3"

[dev-dependencies]
criterion = { git = "https://github.com/japaric/criterion.rs.git" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'unwind'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'unwind'
