[package]
name = "pung"
version = "0.1.0"
authors = ["Sebastian Angel <sebs@cs.utexas.edu>"]
build = "build.rs"

[build-dependencies]
capnpc = "0.7.3"
gcc = "0.3.41"
cmake = "0.1.20"

[dependencies]
time = "0.1.35"
capnp = "0.7.4"
capnp-rpc = "0.7.4"
gj = "0.2.0"
gjio = "0.1.3"
timely = "0.3.0"
timely_communication = "0.1.8"
abomonation = "0.4.3"
byteorder = "1.0.0"
rand = "0.3.15"
rust-crypto = "0.2.36"
quicksort = ">= 1.1.0"
libc = "0.2.19"
getopts = "0.2.14"
bit-vec = "0.4.3"

[dev-dependencies]
criterion = "0.1.2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'unwind'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
